fixed code analyze issues